--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,13 @@ android {
             path "CMakeLists.txt"
         }
     }
+
+    android {
+        buildFeatures {
+            viewBinding true
+        }
+    }
+
 }
 
 dependencies {
@@ -46,4 +53,6 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
