--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    // Picasso
     implementation 'com.squareup.picasso:picasso:2.8'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
+    // View model
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 }
